Criação servlet e verificação dados - index simples

--- a/web/index.html
+++ b/web/index.html
@@ -85,8 +85,8 @@
                         Filmes:<br>
                     </th>
                     <td>
-                        <select name="filmes" size = "4" multiple>
-                            <option value="Acao" selected="">Acao</option> 
+                        <select name="filmes" size = "4" multiple required>
+                            <option value="Acao">Acao</option> 
                             <option value="Suspense">Suspense</option>
                             <option value="Drama">Drama</option>
                             <option value="Romance">Romance</option>
